--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Adaptive Card Toolkit",
   "main": "js/app.js",
   "dependencies": {
-    "gulp-sass": "latest",
-    "gulp-typescript": "latest",
-    "merge2": "latest",
-    "typescript": "latest"
+    "gulp-sass": "^2.3.2",
+    "gulp-typescript": "^3.1.3",
+    "merge2": "^1.0.2",
+    "typescript": "^2.0.10"
   },
   "devDependencies": {
-    "browser-sync": "latest",
+    "browser-sync": "^2.18.1",
     "browserify": "^13.1.1",
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
