--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "interactive-visualizer",
+  "name": "adaptive-card-toolkit",
   "version": "1.0.0",
-  "description": "Interactive Visualizer Adaptive Card Toolkit",
+  "description": "Adaptive Card Toolkit",
   "main": "js/app.js",
   "dependencies": {
-    "gulp-sass": "^2.3.2",
-    "gulp-typescript": "^3.1.3",
+    "gulp-sass": "latest",
+    "gulp-typescript": "latest",
     "merge2": "^1.0.2",
     "typescript": "^2.0.10"
   },
