--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "0.1.0",
     "command": "tsc",
     "isShellCommand": true,
-    "args": ["-w", "-p", "."],
+    "args": ["-w", "-p", "visualizer"],
     "showOutput": "silent",
     "isWatching": true,
     "problemMatcher": "$tsc-watch"
