--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "types": "dist/adaptiveCard.d.ts",
   "private": true,
   "dependencies": {
-      "brace": "0.9.0"
+    "brace": "0.9.0"
   },
   "devDependencies": {
+    "@types/ace": "0.0.32",
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
-    "@types/ace": "0.0.32",
+    "ajv-cli": "1.1.1",
     "browserify": "^13.1.1",
     "http-server": "0.9.0",
     "markdown-it": "8.2.1",
+    "tsify": "2.0.3",
     "tslint": "3.15.1",
     "typescript": "2.0.10",
-    "watchify": "3.7.0",
-    "tsify": "2.0.3",
-    "ajv-cli": "1.1.1"
+    "watchify": "3.7.0"
   },
   "scripts": {
     "build": "tsc -p .",
