--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/adaptiveCard.d.ts",
   "private": true,
   "dependencies": {
-    "brace": "0.9.0"
+    "brace": "0.9.0",
+    "markdown-it": "8.2.1"
   },
   "devDependencies": {
     "@types/ace": "0.0.32",
@@ -15,7 +16,6 @@
     "ajv-cli": "1.1.1",
     "browserify": "^13.1.1",
     "http-server": "0.9.0",
-    "markdown-it": "8.2.1",
     "tsify": "2.0.3",
     "tslint": "3.15.1",
     "typescript": "2.0.10",
@@ -28,6 +28,6 @@
     "server": "node node_modules/http-server/bin/http-server ./Visualizer -c-1 -o",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Microsoft",
   "license": "MIT"
 }
