--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Launch Visualizer",
             "type": "chrome",
             "request": "launch",
-            "file": "${workspaceRoot}/Visualizer/adaptiveCardVisualizer.html",
+            "file": "${workspaceRoot}/Visualizer/index.html",
             "sourceMaps": true
         }
     ]
