--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
     "ajv-cli": "1.1.1",
-    "browserify": "^13.1.1",
     "http-server": "0.9.0",
+    "json-loader": "0.5.4",
     "markdown-it": "8.2.1",
-    "tsify": "2.0.3",
+    "ts-loader": "1.3.0",
     "tslint": "3.15.1",
     "typescript": "2.0.10",
-    "watchify": "3.7.0"
+    "webpack": "1.14.0"
   },
   "scripts": {
     "build": "tsc -p .",
     "watch": "tsc -p . -w",
-    "bundle": "npm run build && watchify -v -p [tsify] visualizer/dist/app.js -o visualizer/dist/bundle.js",
+    "bundle": "webpack --watch",
     "server": "node node_modules/http-server/bin/http-server ./Visualizer -c-1 -o",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
