--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/adaptiveCard.d.ts",
   "private": true,
   "scripts": {
-    "build": "tsc -p .",
+    "build": "webpack",
     "watch": "tsc -p . -w",
     "bundle": "webpack --watch",
     "start": "http-server ./Visualizer -c-1 -o -a localhost",
