--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "watch": "tsc -p . -w",
     "bundle": "webpack --watch",
     "start": "http-server ./Visualizer -c-1 -o -a localhost",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "validate-schema": "ajv validate -s ./schemas/adaptive-card.json -d 'samples/**/*.json'"
   },
   "repository": {
     "type": "git",
