--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "brace": "0.9.0",
-    "markdown-it": "8.2.1"
+    "markdown-it": "8.2.1",
+    "vkbeautify": "^0.99.1"
   },
   "devDependencies": {
     "@types/ace": "0.0.32",
