--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/ace": "0.0.32",
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
+    "@types/vkbeautify": "^0.99.0",
     "ajv-cli": "1.1.1",
     "http-server": "0.9.0",
     "json-loader": "0.5.4",
