--- a/shared/ObjectModel.UWP/ObjectModel.UWP.vcxproj
+++ b/shared/ObjectModel.UWP/ObjectModel.UWP.vcxproj
@@ -26,10 +26,31 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\ObjectModel.Shared\ACParseException.cpp" />
+    <ClCompile Include="..\ObjectModel.Shared\ACParser.cpp" />
+    <ClCompile Include="..\ObjectModel.Shared\AdaptiveCard.cpp" />
+    <ClCompile Include="..\ObjectModel.Shared\Container.cpp" />
+    <ClCompile Include="..\ObjectModel.Shared\Enums.cpp" />
+    <ClCompile Include="..\ObjectModel.Shared\ICardElement.cpp" />
+    <ClCompile Include="..\ObjectModel.Shared\jsoncpp.cpp" />
+    <ClCompile Include="..\ObjectModel.Shared\TextBlock.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\ObjectModel.Shared\ACParseException.h" />
+    <ClInclude Include="..\ObjectModel.Shared\ACParser.h" />
+    <ClInclude Include="..\ObjectModel.Shared\AdaptiveCard.h" />
+    <ClInclude Include="..\ObjectModel.Shared\Container.h" />
+    <ClInclude Include="..\ObjectModel.Shared\Enums.h" />
+    <ClInclude Include="..\ObjectModel.Shared\ICardElement.h" />
+    <ClInclude Include="..\ObjectModel.Shared\json\json-forwards.h" />
+    <ClInclude Include="..\ObjectModel.Shared\json\json.h" />
+    <ClInclude Include="..\ObjectModel.Shared\TextBlock.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{2d040c7d-757a-4292-bb59-62bc53a83c9f}</ProjectGuid>
     <Keyword>StaticLibrary</Keyword>
-    <RootNamespace>ObjectModelLib</RootNamespace>
+    <RootNamespace>ObjectModel.UWP</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <AppContainerApplication>true</AppContainerApplication>
@@ -37,6 +58,7 @@
     <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformMinVersion>10.0.10586.0</WindowsTargetPlatformMinVersion>
     <ApplicationTypeRevision>10.0</ApplicationTypeRevision>
+    <ProjectName>ObjectModel.UWP</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)'=='Debug'" Label="Configuration">
@@ -90,14 +112,6 @@
       <GenerateWindowsMetadata>false</GenerateWindowsMetadata>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="Enums.h" />
-    <ClInclude Include="ICardElement.h" />
-    <ClInclude Include="targetver.h" />
-    <ClInclude Include="TextBlock.h" />
-    <ClCompile Include="ICardElement.cpp" />
-    <ClCompile Include="TextBlock.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
