--- a/UWP/ObjectModel.UWP/ObjectModel.UWP.vcxproj
+++ b/UWP/ObjectModel.UWP/ObjectModel.UWP.vcxproj
@@ -27,25 +27,25 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\ObjectModel.Shared\ACParseException.cpp" />
-    <ClCompile Include="..\ObjectModel.Shared\ACParser.cpp" />
-    <ClCompile Include="..\ObjectModel.Shared\AdaptiveCard.cpp" />
-    <ClCompile Include="..\ObjectModel.Shared\Container.cpp" />
-    <ClCompile Include="..\ObjectModel.Shared\Enums.cpp" />
-    <ClCompile Include="..\ObjectModel.Shared\ICardElement.cpp" />
-    <ClCompile Include="..\ObjectModel.Shared\jsoncpp.cpp" />
-    <ClCompile Include="..\ObjectModel.Shared\TextBlock.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\ACParseException.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\ACParser.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\AdaptiveCard.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\Container.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\Enums.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\ICardElement.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\jsoncpp.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\TextBlock.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\ObjectModel.Shared\ACParseException.h" />
-    <ClInclude Include="..\ObjectModel.Shared\ACParser.h" />
-    <ClInclude Include="..\ObjectModel.Shared\AdaptiveCard.h" />
-    <ClInclude Include="..\ObjectModel.Shared\Container.h" />
-    <ClInclude Include="..\ObjectModel.Shared\Enums.h" />
-    <ClInclude Include="..\ObjectModel.Shared\ICardElement.h" />
-    <ClInclude Include="..\ObjectModel.Shared\json\json-forwards.h" />
-    <ClInclude Include="..\ObjectModel.Shared\json\json.h" />
-    <ClInclude Include="..\ObjectModel.Shared\TextBlock.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\ACParseException.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\ACParser.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\AdaptiveCard.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\Container.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\Enums.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\ICardElement.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\json\json-forwards.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\json\json.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\TextBlock.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{2d040c7d-757a-4292-bb59-62bc53a83c9f}</ProjectGuid>
@@ -93,6 +93,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <CompileAsWinRT>false</CompileAsWinRT>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\shared\ObjectModel;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
